--- a/workspace/gabriel.bib
+++ b/workspace/gabriel.bib
@@ -97,3 +97,24 @@
   year={2019},
   publisher={Wiley Online Library}
 }
+
+@misc{Chap8Slides,
+    author = {Edward L. Ionides},
+    title = {DATASCI/STATS 531 (Winter 2024)
+‘Modeling and Analysis of Time Series Data’ Chaterp 8 Lecture Slides},
+    howpublished = {https://ionides.github.io/531w24/08/slides.pdf}
+}
+
+@misc{Chap3Slides,
+    author = {Edward L. Ionides},
+    title = {DATASCI/STATS 531 (Winter 2024)
+‘Modeling and Analysis of Time Series Data’ Chaterp 3 Lecture Slides},
+    howpublished = {https://ionides.github.io/531w24/03/slides.pdf}
+}
+
+@misc{Chap5Slides,
+    author = {Edward L. Ionides},
+    title = {DATASCI/STATS 531 (Winter 2024)
+‘Modeling and Analysis of Time Series Data’ Chaterp 5 Lecture Slides},
+    howpublished = {https://ionides.github.io/531w24/05/slides.pdf}
+}
